--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,40 +1,5 @@
 @use "../variables" as v;
 
-// Títulos de seção
-%title-section-base {
-    height: 50px;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 1.5rem;
-    margin-bottom: 15px;
-    font-weight: 700;
-}
-
-.red-title-section {
-    @extend %title-section-base;
-    background: v.$red-gradient;
-}
-
-.blue-title-section {
-    @extend %title-section-base;
-    background: v.$blue-gradient;
-}
-
-// Seção de conteúdo
-.content-section {
-    margin-top: 20px;
-    padding: 10px;
-
-    p {
-        @media (max-width: 768px) {
-            text-align: left;
-        }
-    }
-}
-
 // Quem Somos
 .content-who-we-are {
     display: flex;
@@ -68,9 +33,7 @@
     box-sizing: border-box;
     border: 2px solid transparent;
     border-radius: 20px;
-    background-image:
-        linear-gradient(#ffffff, #ffffff),
-        v.$img-border-gradient;
+    background-image: linear-gradient(#ffffff, #ffffff), v.$img-border-gradient;
     background-clip: padding-box, border-box;
     background-origin: padding-box, border-box;
 
@@ -93,12 +56,16 @@
 .card {
     display: flex;
     flex-direction: column;
-    width: 570px;
+    width: 100%;
     border: v.$default-border;
     border-radius: v.$default-border-radius;
     padding: 10px;
     justify-content: flex-start;
     align-items: flex-start;
+
+    @media (min-width: 769px) {
+        width: 570px;
+    }
 
     &-title {
         display: flex;
@@ -153,7 +120,7 @@
     &-card {
         display: flex;
         flex-direction: column;
-        width: 570px;
+        width: 100%;
         border: v.$default-border;
         border-radius: v.$default-border-radius;
         padding: 10px;
@@ -163,6 +130,10 @@
 
         span {
             font-weight: bold;
+        }
+
+        @media (min-width: 769px) {
+            width: 570px;
         }
     }
 }
@@ -178,7 +149,6 @@
 
 .benefits-card {
     width: 100%;
-    max-width: 80%;
     display: flex;
     flex-direction: column;
     border: v.$default-border;
@@ -186,6 +156,10 @@
     padding: 20px;
     justify-content: flex-start;
     align-items: center;
+
+    @media (min-width: 769px) {
+        max-width: 80%;
+    }
 
     span {
         font-weight: bold;
@@ -201,5 +175,6 @@
 .ass {
     p {
         margin: 10px 0;
+        text-align: center;
     }
 }
